--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title: Your awesome title
+title: Makers Club Auckland
 permalink: "/:categories/:title"
 email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: Makers Club is a monthly get together for people who enjoy making things.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
+
+# Colors
+color: "#9012FE"
 
 # Build settings
 markdown: kramdown
