--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,12 @@ collections:
 permalink: "/:categories/:title"
 email: me@jonnotie.com
 description: Makers Club is a monthly get together for people who enjoy making things.
-baseurl: 
-url: 
+baseurl:
+url:
 twitter_username: jonnotie
 jonnotie: jekyll
 color: "#4EAAE5"
+event_url: ""
 markdown: kramdown
 gems:
 - jekyll-feed
