--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,22 @@ collections:
   uploads:
     title: Uploads
     output: true
+defaults:
+- scope:
+    path: ""
+    type: posts
+  values:
+    title:
+    date:
+    location: Golden Dawn
+    at: 20:00:00 Z
+    url:
+    color: "#4EAAE5"
 permalink: "/:categories/:title"
 email: me@jonnotie.com
 description: Makers Club is a monthly get together for people who enjoy making things.
-baseurl: 
-url: 
+baseurl:
+url:
 twitter_username: jonnotie
 jonnotie: jekyll
 color: "#4EAAE5"
