--- a/_config.yml
+++ b/_config.yml
@@ -2,31 +2,20 @@
 title: Makers Club Auckland
 timezone: UTC
 collections:
+  events:
+    title: Events
+    output: true
   posts:
     title: Posts
     output: true
   uploads:
     title: Uploads
     output: true
-<<<<<<< HEAD
-=======
-defaults:
-- scope:
-    path: ''
-    type: posts
-  values:
-    title: 
-    date: 
-    location: Golden Dawn
-    at: 20:00:00 Z
-    url: 
-    color: "#4EAAE5"
->>>>>>> 37fea0ec3790c1650d55539761c728b3d4a01cde
 permalink: "/:categories/:title"
 email: me@jonnotie.com
 description: Makers Club is a monthly get together for people who enjoy making things.
-baseurl: 
-url: 
+baseurl:
+url:
 twitter_username: jonnotie
 jonnotie: jekyll
 color: "#4EAAE5"
