--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,18 @@ collections:
   uploads:
     title: Uploads
     output: true
+defaults:
+  title: Month
+  color:
+  facebook:
+  where:
+    name: Golden Dawn
+    map: https://goo.gl/maps/VB7HBDNztHs
 permalink: "/:categories/:title"
 email: me@jonnotie.com
 description: Makers Club is a monthly get together for people who enjoy making things.
-baseurl: 
-url: 
+baseurl:
+url:
 twitter_username: jonnotie
 jonnotie: jekyll
 color: "#4EAAE5"
