--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,16 @@ collections:
     title: Uploads
     output: true
 defaults:
-  title: Month
-  color: ""
-  facebook: "" 
-  where:
-    name: Golden Dawn
-    map: https://goo.gl/maps/VB7HBDNztHs
+- scope:
+    path: ''
+    type: posts
+  values:
+    title: Month
+    color: ""
+    facebook: ""
+    where:
+      name: Golden Dawn
+      map: https://goo.gl/maps/VB7HBDNztHs
 permalink: "/:categories/:title"
 email: me@jonnotie.com
 description: Makers Club is a monthly get together for people who enjoy making things.
