--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ defaults:
     type: posts
   values:
     title: Month
-    color: ""
-    facebook: ""
+    color: 
+    facebook:
     where:
       name: Golden Dawn
       map: https://goo.gl/maps/VB7HBDNztHs
